--- a/public/entry/entry.jade
+++ b/public/entry/entry.jade
@@ -255,18 +255,20 @@
                   tbody
                     tr(class="entry-travel" ng-repeat="travel in tour.values" ng-click="searchTravel(travel)" style="cursor: pointer;", ng-mouseenter="miniMapShared.travelHovered(travel)" ng-mouseleave="miniMapShared.travelUnhovered(travel)" ng-class="{'minimap-hovered': travel.hovered}")
                       td(ng-class="{'bordered':travel.parent}")
-                        span {{travel.place}}
+                        span(ng-bind-html="highlighted('travel_place', travel)")
                       //td.text-right.tnum-lnum {{travel.gte}}
                       td.text-right.tnum-lnum
-                        span(ng-show="travel.travelStartYear == '0' || travel.estimatedTravelDates") -
-                        span(ng-show="travel.travelStartYear != '0' && !travel.estimatedTravelDates") {{travel.travelStartYear}}
-                        span(ng-show="travel.travelStartMonth != '0' && !travel.estimatedTravelDates") /{{travel.travelStartMonth}}
-                        span(ng-show="travel.travelStartDay != '0' && !travel.estimatedTravelDates") /{{travel.travelStartDay}}
+                        span(ng-class="{'highlighted': highlightTravel(travel)}")
+                          span(ng-show="travel.travelStartYear == '0' || travel.estimatedTravelDates") -
+                          span(ng-show="travel.travelStartYear != '0' && !travel.estimatedTravelDates") {{travel.travelStartYear}}
+                          span(ng-show="travel.travelStartMonth != '0' && !travel.estimatedTravelDates") /{{travel.travelStartMonth}}
+                          span(ng-show="travel.travelStartDay != '0' && !travel.estimatedTravelDates") /{{travel.travelStartDay}}
                       td.text-right.tnum-lnum
-                        span(ng-show="travel.travelEndYear == '0' ||  travel.estimatedTravelDates") -
-                        span(ng-show="travel.travelEndYear != '0' && !travel.estimatedTravelDates") {{travel.travelEndYear}}
-                        span(ng-show="travel.travelEndMonth != '0' && !travel.estimatedTravelDates") /{{travel.travelEndMonth}}
-                        span(ng-show="travel.travelEndDay != '0' && !travel.estimatedTravelDates") /{{travel.travelEndDay}}
+                        span(ng-class="{'highlighted': highlightTravel(travel)}")
+                          span(ng-show="travel.travelEndYear == '0' ||  travel.estimatedTravelDates") -
+                          span(ng-show="travel.travelEndYear != '0' && !travel.estimatedTravelDates") {{travel.travelEndYear}}
+                          span(ng-show="travel.travelEndMonth != '0' && !travel.estimatedTravelDates") /{{travel.travelEndMonth}}
+                          span(ng-show="travel.travelEndDay != '0' && !travel.estimatedTravelDates") /{{travel.travelEndDay}}
                       //td.text-right.tnum-lnum {{travel.lte}}
               
     
