--- a/public/app.css
+++ b/public/app.css
@@ -421,6 +421,16 @@ sup {
   border-top: none;
 }
 
+.mini-table .table>tbody>tr>td.see-more {
+  padding: .5em 0;
+}
+
+.mini-table .table>tbody>tr>td {
+  padding : 0px;
+  border-bottom: 1px solid #f5f5f5;
+  border-top: none;
+}
+
 .mini-table tr.closed {
   opacity: .3;
 }
