--- a/public/index.jade
+++ b/public/index.jade
@@ -82,3 +82,4 @@ html(lang="en", ng-app="app")
     script(type='text/javascript', src='/lists/lists.js')
 
     script(type='text/javascript', src='/components/facet/facet.js')
+    script(type='text/javascript', src='/components/entry-list/entry-list.js')
