--- a/public/explore/explore.jade
+++ b/public/explore/explore.jade
@@ -169,64 +169,8 @@
           p.pull-left.text-large
             strong {{entries.length}} 
             | matching results
-        
-        //  begin standardized results panel
-        .panel.panel-default
-          .panel-heading
-            
-            button.btn.btn-default.btn-xs.list-option(type="button", ng-click="selectAllEntries()") select all
-            button.btn.btn-default.btn-xs.list-option(type="button", ng-click="deselectAllEntries()") deselect all
-            
-            div.btn-group.add-to-list-btn.list-option
-              button.btn.btn-default.btn-xs.dropdown-toggle(type="button", data-toggle="dropdown")
-                span Add Selected Entries to List
-                span.caret
-              ul.dropdown-menu
-                li(ng-show="sharedListModel.listsLoading")
-                  span Loading lists...
-                li(ng-repeat="list in sharedListModel.myLists")
-                  a(ng-click="addSelectedEntriesToList(list)") {{ list.name }}
-                li.divider(role="separator")
-                li.dropdown-header or add to a new list:
-                li
-                  form.input-group.input-group-sm
-                    input.form-control(type="text", placeholder="new list name", ng-model="viewModel.newListName")
-                    span.input-group-btn
-                      button.btn.btn-default(type="submit", ng-disabled="!viewModel.newListName", ng-click="addSelectedEntriesToNewList()") Create & Add
 
-            div.btn-group.list-option
-              button.btn.btn-default.btn-xs.dropdown-toggle(type="button", data-toggle="dropdown")
-                span Sort by...
-                span.caret
-              ul.dropdown-menu
-                li(ng-repeat="dimension in sortModel.activeSortableDimensions")
-                  a(ng-click="sortModel.dimension = dimension.sorting;", ng-class="{ 'bg-info' : sortModel.dimension === dimension.sorting }") {{ dimension.label }}
-                li.divider
-                li
-                  a(ng-click="sortModel.dimension = 'index'", ng-class="{ 'bg-info' : sortModel.dimension === 'index' }") Index
-                li.divider
-                li
-                  .checkbox.entry-order-checkbox
-                    label
-                      input(type="checkbox", ng-model="sortModel.reverseSorting")
-                      div Reverse Order  
-
-            button#export-button.btn.btn-default.btn-xs.pull-right(data-loading-text="Loading...", ng-click="export()", ng-disabled="!entries.length")
-              i.fa.fa-download.margin-right
-              | Export results    
-
-          .panel-body
-            table.table.table-hover
-              tbody.entry-row
-                tr(ng-repeat="entry in entries | orderBy : sortModel.dimension : sortModel.reverseSorting", ng-class="{ warning: entry.selected }")
-                  td.entry-checkbox
-                    input(type="checkbox", ng-model="entry.selected")
-                  td.entry-list-item
-                      a(ng-href="#/entries/{{entry.index}}")
-                        span.add-to-list-label.label.label-success(ng-show="entry.addedToList") Added to list
-                        span.add-to-list-label.label.label-info(ng-show="entry.alreadyInList") Already in list
-                        h4 {{ entry.fullName }}
-                        p {{ entry.biography.slice(0, 200) }} ...
+        entry-list(entries="entries", export="export()")
         
       div(ng-show="noResults && !searching")
         p No results
