--- a/public/components/entry-list/entry-list.jade
+++ b/public/components/entry-list/entry-list.jade
@@ -1,29 +1,32 @@
 .panel.panel-default
-  .panel-heading
+  .panel-heading(ng-show="entries")
 
     button.btn.btn-default.btn-xs.list-option(type="button", ng-click="selectAllEntries()") select all
     button.btn.btn-default.btn-xs.list-option(type="button", ng-click="deselectAllEntries()") deselect all
 
     div.btn-group.add-to-list-btn.list-option
       button.btn.btn-default.btn-xs.dropdown-toggle(type="button", data-toggle="dropdown")
-        span Add Selected Entries to List
+        span {{ isSavedListView ? 'copy' : 'add selected entries to list' }}
         span.caret
       ul.dropdown-menu
+        li.dropdown-header(ng-show="isSavedListView") copy selected entries to list:
         li(ng-show="sharedListModel.listsLoading")
-          span Loading lists...
+          span loading lists...
         li(ng-repeat="list in sharedListModel.myLists")
           a(ng-click="addSelectedEntriesToList(list)") {{ list.name }}
         li.divider(role="separator")
-        li.dropdown-header or add to a new list:
+        li.dropdown-header or {{ isSavedListView ? 'copy' : 'add' }} to a new list:
         li
           form.input-group.input-group-sm
             input.form-control(type="text", placeholder="new list name", ng-model="viewModel.newListName")
             span.input-group-btn
-              button.btn.btn-default(type="submit", ng-disabled="!viewModel.newListName", ng-click="addSelectedEntriesToNewList()") Create & Add
+              button.btn.btn-default(type="submit", ng-disabled="!viewModel.newListName", ng-click="addSelectedEntriesToNewList()") create & {{ isSavedListView ? 'copy' : 'add' }}
+
+    button.btn.btn-warning.btn-xs.list-option(type="button", ng-show="isSavedListView", ng-click="removeSelectedEntriesFromList()") remove
 
     div.btn-group.list-option
       button.btn.btn-default.btn-xs.dropdown-toggle(type="button", data-toggle="dropdown")
-        span Sort by...
+        span sort by...
         span.caret
       ul.dropdown-menu
         li(ng-repeat="dimension in sortModel.activeSortableDimensions")
@@ -36,21 +39,36 @@
           .checkbox.entry-order-checkbox
             label
               input(type="checkbox", ng-model="sortModel.reverseSorting")
-              div Reverse Order  
+              div reverse order
 
-    button#export-button.btn.btn-default.btn-xs.pull-right(data-loading-text="Loading...", ng-click="export()", ng-disabled="!entries.length")
+    button#export-button.btn.btn-default.btn-xs.pull-right(data-loading-text="loading...", ng-click="export()", ng-disabled="!entries.length")
       i.fa.fa-download.margin-right
-      | Export results
+      | export results
 
-  .panel-body
+    div#duplicate-button.btn-group.add-to-list-btn.pull-right(ng-show="isSavedListView")
+      button.btn.btn-default.btn-xs.dropdown-toggle(type="button", data-toggle="dropdown")
+        span duplicate list
+        span.caret
+      ul.dropdown-menu
+        li
+          form.input-group.input-group-sm
+            input.form-control(type="text", placeholder="new list name", ng-model="viewModel.newListName")
+            span.input-group-btn
+              button.btn.btn-default(type="submit", ng-disabled="!viewModel.newListName", ng-click="duplicateList()") duplicate
+
+    button.btn.btn-danger.btn-xs.pull-right(type="button", ng-show="isSavedListView", ng-click="deleteList()") delete this list
+
+  .panel-body.text-center(ng-show="!entries") Loading entries...
+  .panel-body.text-center(ng-show="entries && !entries.length") No entries.
+  .panel-body(ng-show="entries && entries.length")
     table.table.table-hover
       tbody.entry-row
         tr(ng-repeat="entry in entries | orderBy : sortModel.dimension : sortModel.reverseSorting", ng-class="{ warning: entry.selected }")
           td.entry-checkbox
             input(type="checkbox", ng-model="entry.selected")
           td.entry-list-item
-              a(ng-href="#/entries/{{entry.index}}")
-                span.add-to-list-label.label.label-success(ng-show="entry.addedToList") Added to list
-                span.add-to-list-label.label.label-info(ng-show="entry.alreadyInList") Already in list
-                h4 {{ entry.fullName }}
-                p {{ entry.biography.slice(0, 200) }} ...
+            a(ng-href="#/entries/{{entry.index}}")
+              span.add-to-list-label.label.label-success(ng-show="entry.addedToList") Added to list
+              span.add-to-list-label.label.label-info(ng-show="entry.alreadyInList") Already in list
+              h4 {{ entry.fullName }}
+              p {{ entry.biography.slice(0, 200) }} ...
