Fixed list duplication bug.

--- a/public/components/entry-list/entry-list.jade
+++ b/public/components/entry-list/entry-list.jade
@@ -54,7 +54,7 @@
           form.input-group.input-group-sm
             input.form-control(type="text", placeholder="new list name", ng-model="viewModel.newListName")
             span.input-group-btn
-              button.btn.btn-default(type="submit", ng-disabled="!viewModel.newListName", ng-click="duplicateList()") duplicate
+              button.btn.btn-default(type="submit", ng-disabled="!viewModel.newListName", ng-click="handleDuplicateListClick()") duplicate
 
     button.btn.btn-danger.btn-xs.pull-right(type="button", ng-show="isSavedListView", ng-click="deleteList()") delete this list
 
