--- a/public/lists/lists.jade
+++ b/public/lists/lists.jade
@@ -28,6 +28,6 @@
                 export="export",
                 is-saved-list-view="true",
                 remove-selected-entries-from-list="removeSelectedEntriesFromList()",
-                duplicate-list="duplicateList()",
+                duplicate-list="duplicateList(name)",
                 delete-list="deleteList()",
             )
