--- a/public/components/entry-list/entry-list.jade
+++ b/public/components/entry-list/entry-list.jade
@@ -63,7 +63,7 @@
   .panel-body(ng-show="entries && entries.length")
     table.table.table-hover
       tbody.entry-row
-        tr(ng-repeat="entry in entries | orderBy : sortModel.dimension : sortModel.reverseSorting", ng-class="{ warning: entry.selected }")
+        tr(ng-repeat="entry in entries | orderBy : sortModel.dimension : sortModel.reverseSorting | limitTo : entriesPerPage : entriesPerPage * pageNumber", ng-class="{ warning: entry.selected }")
           td.entry-checkbox
             input(type="checkbox", ng-model="entry.selected")
           td.entry-list-item
@@ -72,3 +72,16 @@
               span.add-to-list-label.label.label-info(ng-show="entry.alreadyInList") Already in list
               h4 {{ entry.fullName }}
               p {{ entry.biography.slice(0, 200) }} ...
+  
+  .panel-footer.page-controls(ng-show="entries && entries.length")
+    a(ng-click="setPage(0)", ng-disabled="isPage(0)") << first page
+    a(ng-click="setPage(pageNumber - 1)", ng-disabled="isPage(0)") < previous page
+    
+    a.page-number(
+      ng-repeat="p in getPages() | limitTo : 9 : getStartPageLink()",
+      ng-click="setPage(p)"
+      ng-disabled="isPage(p)"
+    ) {{ p + 1 }}
+    
+    a(ng-click="setPage(pageNumber + 1)", ng-disabled="isPage(getPages().length - 1)") next page >
+    a(ng-click="setPage(getPages().length - 1)", ng-disabled="isPage(getPages().length - 1)") last page >>
