--- a/public/index.jade
+++ b/public/index.jade
@@ -28,10 +28,11 @@ html(lang="en", ng-app="app")
               a(ui-sref="search") Search
             li
               a(ui-sref="explore") Explore 
+            li
+              a(ui-sref="visualizations") Visualizations 
                 sup (beta)
             li
               a(ui-sref="lists") Saved Lists 
-                sup (beta)
                               
           ul.nav.navbar-nav.navbar-right(ng-show="currentUser")
             li(ng-show="currentUser.role=='admin'")
@@ -79,6 +80,7 @@ html(lang="en", ng-app="app")
     script(type='text/javascript', src='/explore/explore.js')
     script(type='text/javascript', src='/entry/entry.js')
     script(type='text/javascript', src='/lists/lists.js')
+    script(type='text/javascript', src='/visualizations/visualizations.js')
 
     script(type='text/javascript', src='/components/facet/facet.js')
     script(type='text/javascript', src='/components/entry-list/entry-list.js')
