Upgraded D3; broke Minimap.

--- a/public/visualizations/visualizations.jade
+++ b/public/visualizations/visualizations.jade
@@ -3,3 +3,5 @@
     .col-lg-12
       .row
         svg(style="margin: 0 auto;")
+        div
+            button.prepare-download(type="button", ng-click="prepareDownload()") Prepare Download
