--- a/public/search/search.pug
+++ b/public/search/search.pug
@@ -70,7 +70,7 @@
             ng-model="query.occupations_title",
             placeholder="occupation ({{ counts.occupations_title }} entries)",
             ng-class="{ filled : query.occupations_title }"
-            typeahead="item for item in getSuggestions('occupations_title', $viewValue)"
+            typeahead="item for item in getSuggestions('occupations.title', $viewValue)"
             typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
             typeahead-on-select="search()")
           input.input-sm.form-control.margin-top(
@@ -78,7 +78,7 @@
             ng-model="query.occupations_group",
             placeholder="group ({{ counts.occupations_group }} entries)",
             ng-class="{ filled : query.occupations_group }"
-            typeahead="item for item in getSuggestions('occupations_group', $viewValue)"
+            typeahead="item for item in getSuggestions('occupations.group', $viewValue)"
             typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
             typeahead-on-select="search()")
           input.input-sm.form-control.margin-top(
@@ -86,7 +86,7 @@
             ng-model="query.occupations_place",
             placeholder="place ({{ counts.occupations_place }} entries)",
             ng-class="{ filled : query.occupations_place }"
-            typeahead="item for item in getSuggestions('occupations_place', $viewValue)"
+            typeahead="item for item in getSuggestions('occupations.place', $viewValue)"
             typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
             typeahead-on-select="search()")
 
@@ -109,7 +109,7 @@
             ng-model="query.societies_title",
             placeholder="society ({{ counts.societies_title }} entries)",
             ng-class="{ filled : query.societies_title }"
-            typeahead="item for item in getSuggestions('societies_title', $viewValue)"
+            typeahead="item for item in getSuggestions('societies.title', $viewValue)"
             typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
             typeahead-on-select="search()")
           input.input-sm.form-control.margin-top(
@@ -117,7 +117,7 @@
             ng-model="query.societies_role",
             placeholder="role ({{ counts.societies_role }} entries)",
             ng-class="{ filled : query.societies_role }"
-            typeahead="item for item in getSuggestions('societies_role', $viewValue)"
+            typeahead="item for item in getSuggestions('societies.role', $viewValue)"
             typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
             typeahead-on-select="search()")
 
@@ -129,7 +129,7 @@
             ng-model="query.exhibitions",
             placeholder="institution ({{ counts.exhibitions }} entries)",
             ng-class="{ filled : query.exhibitions }"
-            typeahead="item for item in getSuggestions('exhibitions_', $viewValue)"
+            typeahead="item for item in getSuggestions('exhibitions.title', $viewValue)"
             typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
             typeahead-on-select="search()")
           input.input-sm.form-control.margin-top(
@@ -137,7 +137,7 @@
             ng-model="query.exhibitions_activity",
             placeholder="activity ({{ counts.exhibitions_activity }} entries)",
             ng-class="{ filled : query.exhibitions_activity }"
-            typeahead="item for item in getSuggestions('exhibitions_activity', $viewValue)"
+            typeahead="item for item in getSuggestions('exhibitions.activity', $viewValue)"
             typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
             typeahead-on-select="search()")
 
@@ -148,7 +148,7 @@
             ng-model="query.education_institution",
             placeholder="institution ({{ counts.education_institution }} entries)",
             ng-class="{ filled : query.education_institution }"
-            typeahead="item for item in getSuggestions('education_institution', $viewValue)"
+            typeahead="item for item in getSuggestions('education.institution', $viewValue)"
             typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
             typeahead-on-select="search()")
           input.input-sm.form-control.margin-top(
@@ -156,7 +156,7 @@
             ng-model="query.education_place",
             placeholder="place ({{ counts.education_place }} entries)",
             ng-class="{ filled : query.education_place }"
-            typeahead="item for item in getSuggestions('education_place', $viewValue)"
+            typeahead="item for item in getSuggestions('education.place', $viewValue)"
             typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
             typeahead-on-select="search()")
           input.input-sm.form-control.margin-top(
@@ -164,7 +164,7 @@
             ng-model="query.education_teacher",
             placeholder="teacher ({{ counts.education_teacher }} entries)",
             ng-class="{ filled : query.education_teacher }"
-            typeahead="item for item in getSuggestions('education_teacher', $viewValue)"
+            typeahead="item for item in getSuggestions('education.teacher', $viewValue)"
             typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
             typeahead-on-select="search()")
           input.input-sm.form-control.margin-top(
@@ -172,7 +172,7 @@
             ng-model="query.education_degree",
             placeholder="degree ({{ counts.education_degree }} entries)",
             ng-class="{ filled : query.education_degree }"
-            typeahead="item for item in getSuggestions('education_degree', $viewValue)"
+            typeahead="item for item in getSuggestions('education.degree', $viewValue)"
             typeahead-min-length="2", typeahead-wait-ms="100"
             typeahead-on-select="search()")
         
@@ -185,7 +185,7 @@
             ng-model="travelModel.place",
             placeholder="place ({{ counts.travels_place }} entries)",
             ng-class="{ filled : travelModel.place }"
-            typeahead="item for item in getSuggestions('travels_place', $viewValue)"
+            typeahead="item for item in getSuggestions('travels.place', $viewValue)"
             typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100"
             typeahead-on-select="search()")
           input.input-sm.form-control.margin-top(
